layers filename capitalized

--- a/P000183.opf/layers/v001/BookTitle.yml
+++ b/P000183.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 595b0c8b4e9c475fae1d0637687eaa68
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
