--- a/P000183.opf/layers/v001/Chapter.yml
+++ b/P000183.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: daaa81ae3dfa4217aa98dec9c8d834e9
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: e55e45e89d194ff299bf4e2892ba081c
