--- a/P000183.opf/layers/v001/Quotation.yml
+++ b/P000183.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: c895e18e2b9a457a9ed4eda4c9104b36
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 49b592417f2f4a4b8b3915c986490f85
