--- a/P000183.opf/layers/v001/Sabche.yml
+++ b/P000183.opf/layers/v001/Sabche.yml
@@ -1,5 +1,5 @@
 id: 9c2afb3b03e441cca5b62ace7dd4846c
-annotation_type: Tsawa
+annotation_type: Sabche
 revision: '00001'
 annotations:
   4b97f3cded1f48f39d8cc2a03bb071e1:
